# fbi-remote-installer-tauri

./: .gitattributes  README.md  package.json  tailwind.config.js
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: connect.rs  file.rs  lib.rs  main.rs
src/components/: Banner.jsx  Table.jsx
src/components/buttons/: Button.jsx
src/utils/: formatBytes.js
src/values/: buttonStyle.js  tableStyle.js
