[package]
name = "fbi-remote-installer-tauri"
version = "0.1.0"
description = "A Tauri Based FBI remote installer"
authors = ["arcatva"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.37"
tokio = { version = "1.37.0", features = ["full"] }
bytes = "1.6.0"



[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
